Adding URL Encoding
Now properly encodes and escapes URLs